<resources>
    <string name="app_name">Todo List App</string>
    <string name="jog">Jog</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="complete">Complete</string>
    <string name="create_a_to_do">Create A To-do</string>
    <string name="capture_image">Capture Image</string>
    <string name="title">Title</string>
</resources>